--- a/main.css
+++ b/main.css
@@ -9,3 +9,44 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+#red {
+  border-top-color: #f00; 
+  color: white; 
+  padding: 20px;
+}
+
+#orange {
+  border-top-color: #ffa500; 
+  color: white; 
+  padding: 20px;
+}
+
+#yellow {
+  border-top-color: #ff0; 
+  color: black; 
+  padding: 20px;
+}
+
+#green {
+  border-top-color: #00bc3f; 
+  color: white; 
+  padding: 20px;
+}
+
+#blue {
+  border-top-color: #06f; 
+  color: white; 
+  padding: 20px;
+}
+
+#indigo {
+  border-top-color: #8a2be2; 
+  color: white; 
+  padding: 20px;
+}
+
+#violet {
+  border-top-color: #d300c9; 
+  color: white; 
+  padding: 20px;
+}
